<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:srcCompat="@drawable/wallemart"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/create_your_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp">

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/firstnameLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    app:layout_constraintTop_toTopOf="@id/firstnameLabel"
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lastnameLabel"
                    app:layout_constraintTop_toTopOf="@id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    app:layout_constraintTop_toTopOf="@id/lastnameLabel"
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/usernameLabel"
                    app:layout_constraintTop_toTopOf="@id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    app:layout_constraintTop_toTopOf="@id/usernameLabel"
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/passwordLabel"
                    app:layout_constraintTop_toTopOf="@id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    app:layout_constraintTop_toTopOf="@id/passwordLabel"
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <Button
                    app:layout_constraintTop_toTopOf="@id/userPassword"
                    android:id="@+id/createUser"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_marginTop="84dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>